log
ju., 17 de abr. de 2025 23:04:59: 
Compilation failed
./test.sh: line 32: gcc: command not found
dde3722
ju., 17 de abr. de 2025 23:07:12: 
Compilation failed
./test.sh: line 32: gcc: command not found
71152f7
ju., 17 de abr. de 2025 23:07:37: 
 hashmap.c | 26 +++++++++++++++++++++-----
 1 file changed, 21 insertions(+), 5 deletions(-)
 tests:  0|0
864aba8
ju., 17 de abr. de 2025 23:19:04: 
 hashmap.c | 47 ++++++++++++++++++++++++-----------------------
 1 file changed, 24 insertions(+), 23 deletions(-)
Compilation failed
./test.sh: line 32: gcc: command not found
ed552fa
ju., 17 de abr. de 2025 23:21:11: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:67:26: error: too many arguments to function 'malloc'
     Pair ** newBuckets = malloc(newCapacity, sizeof(Pair*));
                          ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:485:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *malloc (size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
0b8dde5
ju., 17 de abr. de 2025 23:23:53: 
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'enlarge':
hashmap.c:67:26: error: too many arguments to function 'malloc'
     Pair ** newBuckets = malloc(newCapacity, sizeof(Pair*));
                          ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:485:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *malloc (size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
83045aa
ju., 17 de abr. de 2025 23:29:19: 
Compilation failed
./test.sh: line 32: gcc: command not found
e412108
ju., 17 de abr. de 2025 23:29:39: 
 hashmap.c | 11 +++++------
 1 file changed, 5 insertions(+), 6 deletions(-)
Compilation failed
./test.sh: line 32: gcc: command not found
90597fc
ju., 17 de abr. de 2025 23:32:15: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
./test.sh: line 32: gcc: command not found
2a76444
ju., 17 de abr. de 2025 23:49:52: 
Compilation failed
./test.sh: line 32: gcc: command not found
8a62b5c
ju., 17 de abr. de 2025 23:53:19: 
Compilation failed
./test.sh: line 32: gcc: command not found
55c238a
vi., 18 de abr. de 2025  0:06:49: 
Compilation failed
./test.sh: line 32: gcc: command not found
ffef901
vi., 18 de abr. de 2025  1:02:27: 
 tests:  9|2
total_score: 40/70
4c3c267
vi., 18 de abr. de 2025  1:12:26: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  13|1
total_score: 50/70
3e2985d
vi., 18 de abr. de 2025  1:22:04: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'insertMap':
hashmap.c:44:12: error: 'parActual' undeclared (first use in this function)
     while (parActual != NULL && parActual->key != NULL){
            ^~~~~~~~~
hashmap.c:44:12: note: each undeclared identifier is reported only once for each function it appears in
a599ba5
